Se avanzó en el estilo de la barra de menú

--- a/index.html
+++ b/index.html
@@ -15,32 +15,34 @@
 </head>
 <body>
     <!-- Navbar -->
-    <div class="container">
-        <nav class="nav-menu">
-            <img src="assets/icons/img_logo.png" alt="NewHouse Inmobiliary" class="nav-logo">
-            <ul class="nav-items">
-                <li>
-                    <a href="#about_us" class="href">About Us</a>
-                </li>
-                <li>
-                    <a href="#more_about" class="href">More About</a>
-                </li>
-                <li>
-                    <a href="#benefits" class="href">Benefits</a>
-                </li>
-                <li>
-                    <a href="#reference" class="href">Reference</a>
-                </li>
-                <li>
-                    <a href="#gallery_inmovables" class="href">Immovables</a>
-                </li>
-                <li>
-                    <a href="#contact" class="href">Contact</a>
-                </li>
+    <header>
+        <div class="container">
+            <nav class="nav-menu">
+                <img src="assets/icons/img_logo.png" alt="NewHouse Inmobiliary" class="nav-logo">
+                <ul class="nav-items">
+                    <li>
+                        <a href="#about_us" class="href">About Us</a>
+                    </li>
+                    <li>
+                        <a href="#more_about" class="href">More About</a>
+                    </li>
+                    <li>
+                        <a href="#benefits" class="href">Benefits</a>
+                    </li>
+                    <li>
+                        <a href="#reference" class="href">Reference</a>
+                    </li>
+                    <li>
+                        <a href="#gallery_inmovables" class="href">Immovables</a>
+                    </li>
+                    <li>
+                        <a href="#contact" class="href">Contact</a>
+                    </li>
+                </ul>
                 <button class="burger-menu" id="burger-menu">Burger_Menu</button>
-            </ul>
-        </nav>
-    </div>
+            </nav>
+        </div>
+    </header>
 
     <!-- About Us -->
 
