Se estruturo la 1ra parte del apartado About Us. Se definieron colores. Se montaron de imagens y h1 y h2. Armado de links

--- a/index.html
+++ b/index.html
@@ -16,37 +16,72 @@
 <body>
     <!-- Navbar -->
     <header>
-        <div class="container">
-            <nav class="nav-menu">
-                <img src="assets/icons/img_logo.png" alt="NewHouse Inmobiliary" class="nav-logo">
-                <ul class="nav-items">
-                    <li>
-                        <a href="#about_us" class="href">About Us</a>
-                    </li>
-                    <li>
-                        <a href="#more_about" class="href">More About</a>
-                    </li>
-                    <li>
-                        <a href="#benefits" class="href">Benefits</a>
-                    </li>
-                    <li>
-                        <a href="#reference" class="href">Reference</a>
-                    </li>
-                    <li>
-                        <a href="#gallery_inmovables" class="href">Immovables</a>
-                    </li>
-                    <li>
-                        <a href="#contact" class="href">Contact</a>
-                    </li>
-                </ul>
-                <button class="burger-menu" id="burger-menu">Burger_Menu</button>
-            </nav>
-        </div>
+        <nav class="nav-menu">
+            <img src="assets/icons/img_logo.png" alt="NewHouse Inmobiliary" class="nav-logo">
+            <ul class="nav-items">
+                <li>
+                    <a href="#about_us" class="href">About Us</a>
+                </li>
+                <li>
+                    <a href="#more_about" class="href">More About</a>
+                </li>
+                <li>
+                    <a href="#benefits" class="href">Benefits</a>
+                </li>
+                <li>
+                    <a href="#reference" class="href">Reference</a>
+                </li>
+                <li>
+                    <a href="#gallery_inmovables" class="href">Immovables</a>
+                </li>
+                <li>
+                    <a href="#contact" class="href">Contact</a>
+                </li>
+            </ul>
+            <button class="burger-menu" id="burger-menu">Burger_Menu</button>
+        </nav>
     </header>
-
+    
+    
     <!-- About Us -->
+    <section class="about-us" id="about"> 
+        <h2 class="about-us-text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sed
+            dolorem fugit sapiente porro veniam pariatur dolore nostrum delectus
+            inventore tempore minus nemo, iste ullam illo laboriosam maiores
+            repudiandae quos!
+        </h2>
+        <!--<img src="assets/images/casa-o-departamento.jpg" alt="imagen-inmuebles" loading="lazy" class="image-main"/>-->
+    </section>
 
     <!-- More About -->
+    <section class="more-about" id="more-about">
+        <h1>Tu inmobiliaria</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. <strong>Saepe ad odit animi sed velit nulla reprehenderit illum inventore</strong>, voluptatem sint consectetur perspiciatis iusto assumenda laudantium. <strong>At in perferendis ea quisquam</strong>, sit dignissimos voluptatibus quis tempore eius nesciunt similique voluptatum soluta consectetur, nemo delectus minima quidem laboriosam quod et libero ratione!</p>
+        <!-- Small Showcase -->
+        <h2>Nuestra oferta para ti</h2>
+        <div class="small-showcase">
+            <div class="small-showcase-img">
+                <img src="assets/images/image1.png" alt="image_1">
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel aliquam cupiditate nostrum in perferendis, repellat magni ducimus eius dolorum optio?
+                </p>
+                <div class="">
+                    <a href="#gallery" class="small-showcase-botton">Nuestra oferta</a>
+                </div>
+            </div>
+            <div class="small-showcase-img">
+                <img src="assets/images/image2.png" alt="image_2">
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel aliquam cupiditate nostrum in perferendis, repellat magni ducimus eius dolorum optio?
+                </p>
+                <div class="">
+                    <a href="#contact" class="small-showcase-botton">Venta</a>
+                </div>
+            </div>
+        </div>
+
+    </section>
 
     <!-- Benefits section -->
 
