--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
         </nav>
     </header>
     
-    
     <!-- About Us -->
-    <section class="about-us" id="about"> 
+    <section class="about-us" id="about_us"> 
         <h2 class="about-us-text">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sed
             dolorem fugit sapiente porro veniam pariatur dolore nostrum delectus
@@ -55,7 +54,7 @@
     </section>
 
     <!-- More About -->
-    <section class="more-about" id="more-about">
+    <section class="more-about" id="more_about">
         <h1>Tu inmobiliaria</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. <strong>Saepe ad odit animi sed velit nulla reprehenderit illum inventore</strong>, voluptatem sint consectetur perspiciatis iusto assumenda laudantium. <strong>At in perferendis ea quisquam</strong>, sit dignissimos voluptatibus quis tempore eius nesciunt similique voluptatum soluta consectetur, nemo delectus minima quidem laboriosam quod et libero ratione!</p>
         <!-- Small Showcase -->
@@ -80,10 +79,42 @@
                 </div>
             </div>
         </div>
-
+        <div class="small-showcase-text">
+            <div>
+                <h2>Lorem, ipsum dolor.</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum nihil necessitatibus, mollitia distinctio voluptas officia enim harum! Laboriosam, fuga. Officiis quibusdam reprehenderit sed quia, recusandae enim id eius adipisci alias!</p>
+                <ul>
+                    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea, error?</li>
+                    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea, error?</li>
+                    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea, error?</li>
+                </ul>
+            </div>
+            <img src="assets/images/casa-o-departamento.jpg" alt="image_2">
+        </div>
     </section>
 
     <!-- Benefits section -->
+    <section class="benefits" id="benefits">
+        <h2>Beneficios</h2>
+        <div>
+            <ul>
+                <li>Transparencia</li>
+                <li>Sencillez</li>
+                <li>Claridad</li>
+                <li>Seguridad</li>
+                <li>Responsabilidad</li>
+                <li>Propiedad</li>
+            </ul>
+            <div>
+                <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. <strong>Saepe ad odit animi sed velit nulla reprehenderit illum inventore</strong>, voluptatem sint consectetur perspiciatis iusto assumenda laudantium. <strong>At in perferendis ea quisquam</strong>, sit dignissimos voluptatibus quis tempore eius nesciunt similique voluptatum soluta consectetur, nemo delectus minima quidem laboriosam quod et libero ratione!</p>
+            </div>
+            <img src="assets/images/depto_living.jpg" alt="Living-VIP">
+        </div>
+    </section>
+
+
+
 
     <!-- Reference section -->
 
