Favicon añadido. Se utilizó 'Favicon Generator' (https://favicon.io/)

--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400&display=swap" rel="stylesheet">
+  
     <!-- ICONs -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/styles.css">
@@ -102,30 +109,30 @@
             <div class="benefits-enumerations">
                 <ul>
                     <li>
-                        <span class="material-symbols-outlined">check</span><br/>
+                        <span class="material-symbols-outlined">done</span><br/>
                         <span>Transparencia</span>
                     </li>
                     <li>
-                        <span class="material-symbols-outlined">check</span>
+                        <span class="material-symbols-outlined">done</span>
                         <br/><span>Sencillez</span>
                     </li>
                     <li>
-                        <span class="material-symbols-outlined">check</span><br/>
+                        <span class="material-symbols-outlined">done</span><br/>
                         <span>Claridad</span>
                     </li>
                     <li>
-                        <span class="material-symbols-outlined">check</span><br/>
+                        <span class="material-symbols-outlined">done</span><br/>
                         <span>Seguridad</span>
                     </li>
-                    <li><span class="material-symbols-outlined">check</span><br/>
+                    <li><span class="material-symbols-outlined">done</span><br/>
                         <span>Responsabilidad</span>
                     </li>
                     <li>
-                        <span class="material-symbols-outlined">check</span><br/>
+                        <span class="material-symbols-outlined">done</span><br/>
                         <span>Propiedad</span>
                     </li>
                 </ul>
-                <div clas="benefits-enumerations">
+                <div>
                     <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</h2>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. <strong>Saepe ad odit animi sed velit nulla reprehenderit illum inventore</strong>, voluptatem sint consectetur perspiciatis iusto assumenda laudantium. <strong>At in perferendis ea quisquam</strong>, sit dignissimos voluptatibus quis tempore eius nesciunt similique voluptatum soluta consectetur, nemo delectus minima quidem laboriosam quod et libero ratione!</p>
                 </div>
