Se avanzó en la validación de los campos del formulario mediente codigo JavaScript (formulario.js)

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 
 </head>
 <body>
+    <!-- FORM VALIDATION -->
+    <script src="js/formulario.js"></script>
+    <script src="http://kit.fotawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
     <!-- Navbar -->
     <header>
         <nav class="nav-menu">
@@ -176,6 +179,12 @@
         </div>
         
         <!-- Social accounts - Fixed to the right -->      
+
+
+        
+
+
+
     </div>
 
     <!-- Footer section -->
