--- a/assets/form.html
+++ b/assets/form.html
@@ -54,12 +54,12 @@
 
             <!--email-->
             <div class="formulario__grupo" id="grupo__correo">
-                <label for="correo" class="formulario__label">Correo</label>
+                <label for="correo" class="formulario__label">Correo Electronico</label>
                 <div class="formulario__grupo-input">
                     <input type="email" class="formulario__input" name="correo" id="correo" placeholder="correo@email.com">
                     <i class="formulario__validacion-estado fas fa-times-circle"></i>
                 </div>
-                <p class="formulario__input-error">El correo no puede tener caracteres especiales</p>
+                <p class="formulario__input-error">El correo solo puede contener letras, numeros, puntos, guiones y guion bajo.</p>
             </div>
 
             <!--Telefono-->
@@ -87,12 +87,11 @@
                 <button type="submit" class="formulario__btn">Enviar</button>
                 <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Formuladio enviado exitosamente</p>
             </div>
-
         </form>
     </main>
     
     <script src="js/formulario.js"></script>
-    <script src="http://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
 
 </body>
 </html>
