Se finalizó el código del JavaScript que maneja el menú hamburguesa y añadió al main las clases necesarias

--- a/index.html
+++ b/index.html
@@ -40,22 +40,22 @@
             <img src="assets/icons/img_logo.png" alt="NewHouse Inmobiliary" class="nav-logo">
             <ul class="nav-items show">
                 <li>
-                    <a href="#about_us" class="href">About Us</a>
+                    <a href="#about_us" class="nav-link">About Us</a>
                 </li>
                 <li>
-                    <a href="#more_about" class="href">More About</a>
+                    <a href="#more_about" class="nav-link">More About</a>
                 </li>
                 <li>
-                    <a href="#benefits" class="href">Benefits</a>
+                    <a href="#benefits" class="nav-link">Benefits</a>
                 </li>
                 <li>
-                    <a href="#reference" class="href">Reference</a>
+                    <a href="#reference" class="nav-link">Reference</a>
                 </li>
                 <li>
-                    <a href="#gallery_inmovables" class="href">Immovables</a>
+                    <a href="#gallery_inmovables" class="nav-link">Immovables</a>
                 </li>
                 <li>
-                    <a href="#contact" class="href">Contact</a>
+                    <a href="#contact" class="nav-link">Contact</a>
                 </li>
             </ul>
             <span class="material-symbols-rounded burger-menu" id="burger-menu">
