--- a/assets/gallery.html
+++ b/assets/gallery.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="css/styles_gallery.css">
     <title>Document</title>
 </head>
 <body>
     <div class="full-img-box" id="full-img-box">
         <img src="images/image1.png" id="full-img" alt="">
-        <span onclick="closeImg()">X</span>
+        <!-- <span onclick="closeImg()">X</span> -->
+        <span onclick="closeImg()" class="material-symbols-outlined">
+            cancel
+        </span>
     </div>
-    <h1>Galeria de imagenes</h1>
+    <h1>Projects</h1>
     <span class="linea"></span>
     <section class="img-gallery">
         <img src="images/image1.png" onclick="openFullImg(this.src)" alt="">
